docs/css/main.css
/* ... */
.uikit-refactor .s-typeahead-list--wrapper{position:absolute;width:100%}.uikit-refactor .s-typeahead-list{width:100%;list-style:none;padding:0;margin:0;position:relative;top:-8px;z-index:10;box-sizing:border-box;list-style:none;background:#fff;border:1px solid #333;max-height:213px;overflow-y:scroll;overflow-x:hidden}
.uikit-refactor .s-typeahead-list-item{width:100%;background:#ccc;border-bottom:1px solid #333;text-align:left;padding:8px}
.uikit-refactor .s-typeahead-list-item:last-child{border:0}.uikit-refactor .s-typeahead-list-item--selected,.uikit-refactor .s-typeahead-list-item:hover{background:cornflowerblue;font-weight:700}
#progressbar{background-color:#e2e2e2;border-radius:10px;padding:3px;margin-top:1.5em}
#progressbar>div{background-color:#21b448;width:10%;height:15px;border-radius:10px}
.uikit-refactor .btn-panel-Help{right:0;margin-top:10vh;padding:0;position:fixed}
.uikit-refactor .uikit-btn--help{background-color:#fff;color:#313131;border:1px solid #0756a4;-webkit-border-radius:3px 0 0 3px !important;border-radius:3px 0 0 3px !important;border-right:0;margin-right:-1px;padding-top:40px;background:url(../images/ico-help-black.svg) no-repeat center 20px;background-size:20px 20px;box-shadow:-2px 2px 10px 0 #ccc;z-index:999}
.uikit-refactor .uikit-btn--help:focus,.uikit-refactor .uikit-btn--help:hover{color:white;background:#043c75 url(../images/ico-help-white.svg) no-repeat center 20px;background-size:20px 20px}
.uikit-refactor .uikit-btn--help{background-color:#fff;color:#313131;border:1px solid #0756a4}
.uikit-refactor .ico-email{background:url(../images/ico-email-blue.svg) no-repeat 0 0;background-size:20px 20px;display:inline-block;width:20px;height:20px;margin-bottom:-4px;margin-right:10px}
.uikit-refactor .ico-phone{background:url(../images/ico-phone-blue.svg) no-repeat 0 0;background-size:20px 20px;display:inline-block;width:20px;height:20px;margin-bottom:-4px;margin-right:10px}
.uikit-refactor .modal-window a.modal-close{float:right;background:transparent url(../images/ico-close-black.svg) no-repeat 0 12px;background-size:38px 38px;border-bottom:0;color:black;padding:6px 0 0 26px;margin-right:2%;text-decoration:none}
.uikit-refactor .modal-window a.modal-close:focus,.uikit-refactor .modal-window a.modal-close:hover{background:transparent url(../images/ico-close-black.svg) no-repeat 0 12px;background-size:38px 38px}
.uikit-refactor .modal-window{position:fixed;background-color:rgba(0,0,0,0.2);top:0;right:0;bottom:0;left:0;z-index:999;opacity:0;pointer-events:none;-webkit-transition:all .3s;-moz-transition:all .3s;transition:all .3s}
.uikit-refactor .modal-window:target,.uikit-refactor .modal-window.modal-visible{opacity:1;pointer-events:auto}
.uikit-refactor .modal-window>div{width:400px;position:relative;margin:10% auto;padding:2rem;background:#fff;color:#444}
.uikit-refactor .modal-close{color:#aaa;line-height:50px;font-size:80%;position:absolute;right:0;text-align:center;top:0;width:70px;text-decoration:none}
.uikit-refactor .modal-close:focus,.uikit-refactor .modal-close:hover{color:#000}
.uikit-refactor .modal-buttons{border-top:1px solid #e2e2e2 !important;clear:both;margin:2.4em 0;padding-top:1em}
.uikit-refactor .uikit-header{padding:1em 0 0 0;margin-bottom:0}.uikit-refactor .uikit-header.uikit-header--dark{background-color:#1057a7}
.uikit-refactor header{min-height:3em}.uikit-refactor header img{max-width:150px;width:100%;float:left}
.uikit-refactor header h1{color:white;float:left;font-weight:400;font-size:1em;padding:0;margin:0}
.uikit-refactor header .separator{border-right:1px solid white;float:left;height:20px;width:1px;display:inline-block;margin:0 1em;padding-top:.5em}
.uikit-refactor header sup.beta{display:inline-block;padding:3px 5px;letter-spacing:1px;border-radius:4px;background:white;color:#1057a7;line-height:1;font-size:.6rem;vertical-align:top;font-weight:700;margin-left:5px;top:0;text-transform:uppercase}
.uikit-refactor header ul{clear:both;padding-left:0}.uikit-refactor header li{display:block;padding:0}
.uikit-refactor header li a{color:#fff;font-weight:bold}.uikit-refactor header li.profile a{background:#1057a7 url(../images/ico-profile.svg) no-repeat 0 2px;padding:2px 2px 2px 25px;background-size:20px 20px;font-weight:normal}
.uikit-refactor header li.profile a:focus,.uikit-refactor header li.profile a:hover{background-color:black}
@media only screen and (min-width:480px){.uikit-refactor header{min-height:4em}.uikit-refactor header ul{float:right;clear:none}
.uikit-refactor header li{display:inline-block;padding:.8em 0 0 0}.uikit-refactor header img{max-width:220px}
.uikit-refactor header .separator{height:30px;margin-top:.5em}.uikit-refactor header h1{font-size:1.5em;margin-top:.15em}
}.uikit-refactor .hero-main{background:#1057a7;font-size:.9rem;padding-bottom:1em;margin-bottom:.5em}
.uikit-refactor .hero-main h1{font-weight:normal;color:white;font-size:1.5rem;margin-bottom:.5em}
.uikit-refactor .hero-main p{color:white}@media only screen and (min-width:480px){.uikit-refactor .hero-main{background:#1057a7 url(../images/bg-header.jpg) no-repeat 0 0;background-size:cover;font-size:1.1rem;padding-bottom:1em;margin-bottom:1em}
.uikit-refactor .hero-main h1{font-weight:normal;color:white;font-size:2rem;margin-bottom:.5em}
.uikit-refactor .hero-main p{color:white}}.uikit-refactor.landing-page .uikit-header.uikit-header--dark{background-color:white}
.uikit-refactor.landing-page header{min-height:3em}.uikit-refactor.landing-page header img{max-width:150px}
.uikit-refactor.landing-page header h1{color:#1057a7;font-weight:400;font-size:1em}
.uikit-refactor.landing-page header .separator{border-right:1px solid black;margin-top:.25em;height:20px}
.uikit-refactor.landing-page header sup.beta{display:inline-block;padding:3px 5px;border-radius:4px;background:#1057a7;color:white;font-size:.6rem}
.uikit-refactor.landing-page header ul{margin:0}.uikit-refactor.landing-page header li{padding:0}
/* ... */

